--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,74 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tsamedical</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script>
+    //     _   _                    _____                                        _       _
+    //    | \ | |                  / ____|                                      (_)     | |
+    //    |  \| | ___  _ __ ______| |     ___  _ __ ___  _ __ ___   ___ _ __ ___ _  __ _| |
+    //    | . ` |/ _ \| '_ \______| |    / _ \| '_ ` _ \| '_ ` _ \ / _ \ '__/ __| |/ _` | |
+    //    | |\  | (_) | | | |     | |___| (_) | | | | | | | | | | |  __/ | | (__| | (_| | |
+    //    |_|_\_|\___/|_| |_|      \_____\___/|_| |_| |_|_| |_| |_|\___|_|  \___|_|\__,_|_|  _        _ _           _
+    //    |  __ \                    | |                                            | (_)   | |      (_) |         | |
+    //    | |  | | ___    _ __   ___ | |_    ___ ___  _ __  _   _    ___  _ __    __| |_ ___| |_ _ __ _| |__  _   _| |_ ___
+    //    | |  | |/ _ \  | '_ \ / _ \| __|  / __/ _ \| '_ \| | | |  / _ \| '__|  / _` | / __| __| '__| | '_ \| | | | __/ _ \
+    //    | |__| | (_) | | | | | (_) | |_  | (_| (_) | |_) | |_| | | (_) | |    | (_| | \__ \ |_| |  | | |_) | |_| | ||  __/
+    //    |_____/ \___/  |_| |_|\___/ \__|  \___\___/| .__/ \__, |  \___/|_|     \__,_|_|___/\__|_|  |_|_.__/ \__,_|\__\___|
+    //                                               | |     __/ |
+    //                                               |_|    |___/
+
+    // Built with
+    //  _____       _              ____          _____       _ _
+    // |  __ \     | |            / __ \        |  __ \     (_) |
+    // | |__) |   _| |__  _   _  | |  | |_ __   | |__) |__ _ _| |___
+    // |  _  / | | | '_ \| | | | | |  | | '_ \  |  _  // _` | | / __|
+    // | | \ \ |_| | |_) | |_| | | |__| | | | | | | \ \ (_| | | \__ \
+    // |_|  \_\__,_|_.__/ \__, |  \____/|_| |_| |_|  \_\__,_|_|_|___/
+    //                     __/ |
+    //                    |___/
+
+    // Hosted with
+    //  _    _                _
+    // | |  | |              | |
+    // | |__| | ___ _ __ ___ | | ___   _
+    // |  __  |/ _ \ '__/ _ \| |/ / | | |
+    // | |  | |  __/ | | (_) |   <| |_| |
+    // |_|  |_|\___|_|  \___/|_|\_\\__,_|
+
+    // Styled by
+    //  ______                    _       _   _
+    // |  ____|                  | |     | | (_)
+    // | |__ ___  _   _ _ __   __| | __ _| |_ _  ___  _ __
+    // |  __/ _ \| | | | '_ \ / _` |/ _` | __| |/ _ \| '_ \
+    // | | | (_) | |_| | | | | (_| | (_| | |_| | (_) | | | |
+    // |_|  \___/ \__,_|_| |_|\__,_|\__,_|\__|_|\___/|_| |_|
+
+    // Scripted with
+    //    _  ____
+    //   (_)/ __ \
+    //    _| |  | |_   _  ___ _ __ _   _
+    //   | | |  | | | | |/ _ \ '__| | | |
+    //   | | |__| | |_| |  __/ |  | |_| |
+    //   | |\___\_\\__,_|\___|_|   \__, |
+    //  _/ |                        __/ |
+    // |__/                        |___/
+
+    // Using database
+    //  _____          _                  _____  ____  _
+    // |  __ \        | |                / ____|/ __ \| |
+    // | |__) |__  ___| |_ __ _ _ __ ___| (___ | |  | | |
+    // |  ___/ _ \/ __| __/ _` | '__/ _ \\___ \| |  | | |
+    // | |  | (_) \__ \ || (_| | | |  __/____) | |__| | |____
+    // |_|   \___/|___/\__\__, |_|  \___|_____/ \___\_\______|
+    //                     __/ |
+    //                    |___/
+
+    // ASCII Text: http://patorjk.com/software/taag/#p=display&f=Big
+    </script>
+    <title>[company] - <%= @title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +77,89 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="header">
+      <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
+        <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
+        <div class="title-bar-title">Menu</div>
+      </div>
+
+      <div class="top-bar" id="responsive-menu">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu="data-dropdown-menu">
+            <li class="menu-text">[company]</li>
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li class="has-submenu">
+              <a href="/services/">Services</a>
+              <ul class="submenu menu vertical" data-submenu="data-submenu">
+                <li>
+                  <a href="/services/#11">sub1</a>
+                </li>
+                <li>
+                  <a href="/services/#22">sub2</a>
+                </li>
+                <li>
+                  <a href="/services/#33">sub3</a>
+                </li>
+              </ul>
+            </li>
+            <li class="has-submenu">
+              <a href="#0">Patient Resources</a>
+              <ul class="submenu menu vertical" data-submenu="data-submenu">
+                <li>
+                  <a href="/services/#111">sub1</a>
+                </li>
+                <li>
+                  <a href="/services/#222">sub2</a>
+                </li>
+                <li>
+                  <a href="/services/#333">sub3</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="/contact/">Contact</a>
+            </li>
+            <li class="has-submenu">
+              <a href="/more/">More</a>
+              <ul class="submenu menu vertical" data-submenu="data-submenu">
+                <li>
+                  <a href="/more/tsa.shtml">TSA</a>
+                </li>
+                <li>
+                  <a href="/more/cte.shtml">CTE</a>
+                </li>
+                <li>
+                  <a href="/more/devs.shtml">About the Developers</a>
+                </li>
+                <li>
+                  <a href="/more/site.shtml">About the Site</a>
+                </li>
+                <li>
+                  <a href="/more/company.shtml">About the Company</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li><input type="search" placeholder="Search"></li>
+            <li>
+              <button type="button" class="button">Search</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="content">
+      <div class="grid-container">
+        <%= yield %>
+      </div>
+    </div>
+
+    <div id="footer"></div>
   </body>
 </html>
