--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,70 +1,73 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-    //     _   _                    _____                                        _       _
-    //    | \ | |                  / ____|                                      (_)     | |
-    //    |  \| | ___  _ __ ______| |     ___  _ __ ___  _ __ ___   ___ _ __ ___ _  __ _| |
-    //    | . ` |/ _ \| '_ \______| |    / _ \| '_ ` _ \| '_ ` _ \ / _ \ '__/ __| |/ _` | |
-    //    | |\  | (_) | | | |     | |___| (_) | | | | | | | | | | |  __/ | | (__| | (_| | |
-    //    |_|_\_|\___/|_| |_|      \_____\___/|_| |_| |_|_| |_| |_|\___|_|  \___|_|\__,_|_|  _        _ _           _
-    //    |  __ \                    | |                                            | (_)   | |      (_) |         | |
-    //    | |  | | ___    _ __   ___ | |_    ___ ___  _ __  _   _    ___  _ __    __| |_ ___| |_ _ __ _| |__  _   _| |_ ___
-    //    | |  | |/ _ \  | '_ \ / _ \| __|  / __/ _ \| '_ \| | | |  / _ \| '__|  / _` | / __| __| '__| | '_ \| | | | __/ _ \
-    //    | |__| | (_) | | | | | (_) | |_  | (_| (_) | |_) | |_| | | (_) | |    | (_| | \__ \ |_| |  | | |_) | |_| | ||  __/
-    //    |_____/ \___/  |_| |_|\___/ \__|  \___\___/| .__/ \__, |  \___/|_|     \__,_|_|___/\__|_|  |_|_.__/ \__,_|\__\___|
-    //                                               | |     __/ |
-    //                                               |_|    |___/
+    <pre>
+      <!--
+     _   _                    _____                                        _       _
+    | \ | |                  / ____|                                      (_)     | |
+    |  \| | ___  _ __ ______| |     ___  _ __ ___  _ __ ___   ___ _ __ ___ _  __ _| |
+    | . ` |/ _ \| '_ \______| |    / _ \| '_ ` _ \| '_ ` _ \ / _ \ '__/ __| |/ _` | |
+    | |\  | (_) | | | |     | |___| (_) | | | | | | | | | | |  __/ | | (__| | (_| | |
+    |_|_\_|\___/|_| |_|      \_____\___/|_| |_| |_|_| |_| |_|\___|_|  \___|_|\__,_|_|  _        _ _           _
+    |  __ \                    | |                                            | (_)   | |      (_) |         | |
+    | |  | | ___    _ __   ___ | |_    ___ ___  _ __  _   _    ___  _ __    __| |_ ___| |_ _ __ _| |__  _   _| |_ ___
+    | |  | |/ _ \  | '_ \ / _ \| __|  / __/ _ \| '_ \| | | |  / _ \| '__|  / _` | / __| __| '__| | '_ \| | | | __/ _ \
+    | |__| | (_) | | | | | (_) | |_  | (_| (_) | |_) | |_| | | (_) | |    | (_| | \__ \ |_| |  | | |_) | |_| | ||  __/
+    |_____/ \___/  |_| |_|\___/ \__|  \___\___/| .__/ \__, |  \___/|_|     \__,_|_|___/\__|_|  |_|_.__/ \__,_|\__\___|
+                                               | |     __/ |
+                                               |_|    |___/
 
-    // Built with
-    //  _____       _              ____          _____       _ _
-    // |  __ \     | |            / __ \        |  __ \     (_) |
-    // | |__) |   _| |__  _   _  | |  | |_ __   | |__) |__ _ _| |___
-    // |  _  / | | | '_ \| | | | | |  | | '_ \  |  _  // _` | | / __|
-    // | | \ \ |_| | |_) | |_| | | |__| | | | | | | \ \ (_| | | \__ \
-    // |_|  \_\__,_|_.__/ \__, |  \____/|_| |_| |_|  \_\__,_|_|_|___/
-    //                     __/ |
-    //                    |___/
+    built with
+     _____       _              ____          _____       _ _
+    |  __ \     | |            / __ \        |  __ \     (_) |
+    | |__) |   _| |__  _   _  | |  | |_ __   | |__) |__ _ _| |___
+    |  _  / | | | '_ \| | | | | |  | | '_ \  |  _  // _` | | / __|
+    | | \ \ |_| | |_) | |_| | | |__| | | | | | | \ \ (_| | | \__ \
+    |_|  \_\__,_|_.__/ \__, |  \____/|_| |_| |_|  \_\__,_|_|_|___/
+                        __/ |
+                       |___/
 
-    // Hosted with
-    //  _    _                _
-    // | |  | |              | |
-    // | |__| | ___ _ __ ___ | | ___   _
-    // |  __  |/ _ \ '__/ _ \| |/ / | | |
-    // | |  | |  __/ | | (_) |   <| |_| |
-    // |_|  |_|\___|_|  \___/|_|\_\\__,_|
+    hosted with
+     _    _                _
+    | |  | |              | |
+    | |__| | ___ _ __ ___ | | ___   _
+    |  __  |/ _ \ '__/ _ \| |/ / | | |
+    | |  | |  __/ | | (_) |   <| |_| |
+    |_|  |_|\___|_|  \___/|_|\_\\__,_|
 
-    // Styled by
-    //  ______                    _       _   _
-    // |  ____|                  | |     | | (_)
-    // | |__ ___  _   _ _ __   __| | __ _| |_ _  ___  _ __
-    // |  __/ _ \| | | | '_ \ / _` |/ _` | __| |/ _ \| '_ \
-    // | | | (_) | |_| | | | | (_| | (_| | |_| | (_) | | | |
-    // |_|  \___/ \__,_|_| |_|\__,_|\__,_|\__|_|\___/|_| |_|
+    styled by
+     ______                    _       _   _
+    |  ____|                  | |     | | (_)
+    | |__ ___  _   _ _ __   __| | __ _| |_ _  ___  _ __
+    |  __/ _ \| | | | '_ \ / _` |/ _` | __| |/ _ \| '_ \
+    | | | (_) | |_| | | | | (_| | (_| | |_| | (_) | | | |
+    |_|  \___/ \__,_|_| |_|\__,_|\__,_|\__|_|\___/|_| |_|
 
-    // Scripted with
-    //    _  ____
-    //   (_)/ __ \
-    //    _| |  | |_   _  ___ _ __ _   _
-    //   | | |  | | | | |/ _ \ '__| | | |
-    //   | | |__| | |_| |  __/ |  | |_| |
-    //   | |\___\_\\__,_|\___|_|   \__, |
-    //  _/ |                        __/ |
-    // |__/                        |___/
+    scripted with
+       _  ____
+      (_)/ __ \
+       _| |  | |_   _  ___ _ __ _   _
+      | | |  | | | | |/ _ \ '__| | | |
+      | | |__| | |_| |  __/ |  | |_| |
+      | |\___\_\\__,_|\___|_|   \__, |
+     _/ |                        __/ |
+    |__/                        |___/
 
-    // Using database
-    //  _____          _                  _____  ____  _
-    // |  __ \        | |                / ____|/ __ \| |
-    // | |__) |__  ___| |_ __ _ _ __ ___| (___ | |  | | |
-    // |  ___/ _ \/ __| __/ _` | '__/ _ \\___ \| |  | | |
-    // | |  | (_) \__ \ || (_| | | |  __/____) | |__| | |____
-    // |_|   \___/|___/\__\__, |_|  \___|_____/ \___\_\______|
-    //                     __/ |
-    //                    |___/
+    using database
+     _____          _                  _____  ____  _
+    |  __ \        | |                / ____|/ __ \| |
+    | |__) |__  ___| |_ __ _ _ __ ___| (___ | |  | | |
+    |  ___/ _ \/ __| __/ _` | '__/ _ \\___ \| |  | | |
+    | |  | (_) \__ \ || (_| | | |  __/____) | |__| | |____
+    |_|   \___/|___/\__\__, |_|  \___|_____/ \___\_\______|
+                        __/ |
+                       |___/
 
-    // ASCII Text: http://patorjk.com/software/taag/#p=display&f=Big
-    </script>
-    <title>[company] - <%= @title %></title>
+    ascii text: http://patorjk.com/software/taag/#p=display&f=big
+     -->
+    </pre>
+    <title>[company] -
+      <%= @title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -74,6 +77,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application' %>
   </head>
 
   <body>
