removed blank space at top of page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <pre>
+    <pre style="display:none">
       <!--
      _   _                    _____                                        _       _
     | \ | |                  / ____|                                      (_)     | |
