--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,12 +82,7 @@
 
   <body>
     <div id="header">
-      <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
-        <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
-        <div class="title-bar-title">Menu</div>
-      </div>
-
-      <div class="top-bar" id="responsive-menu">
+      <div class="top-bar">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu="data-dropdown-menu">
             <li class="menu-text">[company]</li>
