--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,71 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <pre style="display:none">
-      <!--
-     _   _                    _____                                        _       _
-    | \ | |                  / ____|                                      (_)     | |
-    |  \| | ___  _ __ ______| |     ___  _ __ ___  _ __ ___   ___ _ __ ___ _  __ _| |
-    | . ` |/ _ \| '_ \______| |    / _ \| '_ ` _ \| '_ ` _ \ / _ \ '__/ __| |/ _` | |
-    | |\  | (_) | | | |     | |___| (_) | | | | | | | | | | |  __/ | | (__| | (_| | |
-    |_|_\_|\___/|_| |_|      \_____\___/|_| |_| |_|_| |_| |_|\___|_|  \___|_|\__,_|_|  _        _ _           _
-    |  __ \                    | |                                            | (_)   | |      (_) |         | |
-    | |  | | ___    _ __   ___ | |_    ___ ___  _ __  _   _    ___  _ __    __| |_ ___| |_ _ __ _| |__  _   _| |_ ___
-    | |  | |/ _ \  | '_ \ / _ \| __|  / __/ _ \| '_ \| | | |  / _ \| '__|  / _` | / __| __| '__| | '_ \| | | | __/ _ \
-    | |__| | (_) | | | | | (_) | |_  | (_| (_) | |_) | |_| | | (_) | |    | (_| | \__ \ |_| |  | | |_) | |_| | ||  __/
-    |_____/ \___/  |_| |_|\___/ \__|  \___\___/| .__/ \__, |  \___/|_|     \__,_|_|___/\__|_|  |_|_.__/ \__,_|\__\___|
-                                               | |     __/ |
-                                               |_|    |___/
-
-    built with
-     _____       _              ____          _____       _ _
-    |  __ \     | |            / __ \        |  __ \     (_) |
-    | |__) |   _| |__  _   _  | |  | |_ __   | |__) |__ _ _| |___
-    |  _  / | | | '_ \| | | | | |  | | '_ \  |  _  // _` | | / __|
-    | | \ \ |_| | |_) | |_| | | |__| | | | | | | \ \ (_| | | \__ \
-    |_|  \_\__,_|_.__/ \__, |  \____/|_| |_| |_|  \_\__,_|_|_|___/
-                        __/ |
-                       |___/
-
-    hosted with
-     _    _                _
-    | |  | |              | |
-    | |__| | ___ _ __ ___ | | ___   _
-    |  __  |/ _ \ '__/ _ \| |/ / | | |
-    | |  | |  __/ | | (_) |   <| |_| |
-    |_|  |_|\___|_|  \___/|_|\_\\__,_|
-
-    styled by
-     ______                    _       _   _
-    |  ____|                  | |     | | (_)
-    | |__ ___  _   _ _ __   __| | __ _| |_ _  ___  _ __
-    |  __/ _ \| | | | '_ \ / _` |/ _` | __| |/ _ \| '_ \
-    | | | (_) | |_| | | | | (_| | (_| | |_| | (_) | | | |
-    |_|  \___/ \__,_|_| |_|\__,_|\__,_|\__|_|\___/|_| |_|
-
-    scripted with
-       _  ____
-      (_)/ __ \
-       _| |  | |_   _  ___ _ __ _   _
-      | | |  | | | | |/ _ \ '__| | | |
-      | | |__| | |_| |  __/ |  | |_| |
-      | |\___\_\\__,_|\___|_|   \__, |
-     _/ |                        __/ |
-    |__/                        |___/
-
-    using database
-     _____          _                  _____  ____  _
-    |  __ \        | |                / ____|/ __ \| |
-    | |__) |__  ___| |_ __ _ _ __ ___| (___ | |  | | |
-    |  ___/ _ \/ __| __/ _` | '__/ _ \\___ \| |  | | |
-    | |  | (_) \__ \ || (_| | | |  __/____) | |__| | |____
-    |_|   \___/|___/\__\__, |_|  \___|_____/ \___\_\______|
-                        __/ |
-                       |___/
-
-    ascii text: http://patorjk.com/software/taag/#p=display&f=big
-     -->
-    </pre>
     <title>[company] -
       <%= @title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -75,8 +10,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application' %>
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
@@ -111,13 +46,13 @@
               <a href="#0">Patient Resources</a>
               <ul class="submenu menu vertical" data-submenu="data-submenu">
                 <li>
-                  <a href="/services/#111">sub1</a>
+                  <a href="/resources/#111">sub1</a>
                 </li>
                 <li>
-                  <a href="/services/#222">sub2</a>
+                  <a href="/resources/#222">sub2</a>
                 </li>
                 <li>
-                  <a href="/services/#333">sub3</a>
+                  <a href="/resources/#333">sub3</a>
                 </li>
               </ul>
             </li>
