Implemented CRUD for Services and Providers

--- a/app/views/errors/server.html.erb
+++ b/app/views/errors/server.html.erb
@@ -1,3 +1,5 @@
+<% @title = "500 Server Error" %>
+
 <h1>500 - Server Error</h1>
 <p>An unknown error occured</p>
 <p>The server was unable to process your request</p>
