--- a/app/views/errors/unnacceptable.html.erb
+++ b/app/views/errors/unnacceptable.html.erb
@@ -1,3 +1,5 @@
+<% @title = "422 Unnacceptable" %>
+
 <h1>422 - Unnacceptable</h1>
 <p>The server understood, but could not fulfill your request</p>
 <p>This likely means that you do not have permission to perform the requested action</p>
