--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -1,3 +1,5 @@
+<% @title = "403 Forbidden" %>
+
 <h1>403 - Forbidden</h1>
 <p>You do not have access to this page</p>
 <p>Contact an administrator to gain access</p>
