--- a/app/views/errors/unauthorized.html.erb
+++ b/app/views/errors/unauthorized.html.erb
@@ -1,3 +1,5 @@
+<% @title = "401 Unauthorized" %>
+
 <h1>401 - Unauthorized</h1>
 <p>You don't have access to this page</p>
 <p>Please authenticated and try again</p>
