Added warnings for service providers and services not containing any members

--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -36,5 +36,11 @@
       </div>
     </div>
   <% end %>
-  <% console %>
-  </div>
+
+  <% if @providers.length == 0 %>
+    <div class="callout warning">
+      <p>No service providers found.</p>
+    </div>
+  <% end %>
+
+</div>
