--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -24,8 +24,8 @@
             <hr>
             <h5>Call/Email for a quote</h5>
             <div class="grid-x">
-              <p class="cell small-6">Phone: <%= service.provider.phone %></p>
-              <p class="cell small-6">Email: <%= service.provider.email %></p>
+              <p class="cell medium-6">Phone: <%= service.provider.phone %></p>
+              <p class="cell medium-6">Email: <%= service.provider.email %></p>
             </div>
           </div>
         </div>
