--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <% console %>
     <div id="header">
       <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="large">
         <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
