--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -16,8 +16,8 @@
           <hr>
           <h5>Call/Email for a quote</h5>
           <div class="grid-x">
-            <p class="cell small-6">Phone: <%= provider.phone %></p>
-            <p class="cell small-6">Email: <%= provider.email %></p>
+            <p class="cell medium-6">Phone: <%= provider.phone %></p>
+            <p class="cell medium-6">Email: <%= provider.email %></p>
           </div>
           <h5>Visit their website</h5>
           <%= link_to "View Site", "//#{provider.website}" %>
