--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -5,11 +5,11 @@
 <%= link_to "Show Details", "#", { data: { toggle: "provider-details" }} %>
 <div id="provider-details" class="hide" data-toggler=".hide" style="margin-top: 1rem;">
   <div class="grid-x grid-margin-x grid-padding-x">
-    <div class="cell small-6">
+    <div class="cell medium-6">
       <p>Name: <%= @provider.name %></p>
       <p>Website: <%= @provider.website %></p>
     </div>
-    <div class="cell small-6">
+    <div class="cell medium-6">
       <p>Phone: <%= @provider.phone %></p>
       <p>Email: <%= @provider.email %></p>
     </div>
