--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,11 @@
   </head>
 
   <body>
-    <% console %>
+    <%
+    if Rails.env.development?
+      console
+    end
+       %>
     <div id="header">
       <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="large">
         <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
