--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,10 +14,10 @@
  *= require_self
 
  */
-
- @import "foundation-sites/scss/foundation.scss";
- @include foundation-everything;
-
-.dark {
-  color: $dark-gray;
-}
+$prototype-transformation-breakpoints: true;
+@import "foundation-sites/scss/foundation.scss";
+@import "motion-ui/src/motion-ui.scss";
+@import "icons.scss";
+@include foundation-everything($prototype: true);
+@include motion-ui-transitions;
+@include motion-ui-animations;
